Scroll discussions horizontally on overflow to avoid breaking page layout

--- a/resources/assets/less/bem/beatmap-discussions.less
+++ b/resources/assets/less/bem/beatmap-discussions.less
@@ -16,6 +16,10 @@
 
   &__discussion {
     .own-layer();
+
+    @media @mobile {
+      overflow-x: auto;
+    }
   }
 
   &__discussions {
